5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1649_1054.log
== TEST (2019-04-05 19:48:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("coordenada x: "))
Y = float(input("coordenada y: "))
if(Y = 2*X + 3) :
	print("ponto pertence a reta")
else :
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    if(Y = 2*X + 3) :
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:49:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("coordenada x: "))
Y = float(input("coordenada y: "))
if(Y == 2*X + 3) :
	print("ponto pertence a reta")
else :
	print("ponto nao pertence a reta")
-- OUTPUT:
ponto nao pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:49:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("coordenada x: "))
Y = float(input("coordenada y: "))
if(Y == (-2)*X + 3) :
	print("ponto pertence a reta")
else :
	print("ponto nao pertence a reta")
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:49:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("coordenada x: "))
Y = float(input("coordenada y: "))
if(Y == (-2)*X + 3) :
	print("ponto pertence a reta")
else :
	print("ponto nao pertence a reta")
-- EXECUTION TIME:
0.16961
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 00:59:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("coordenada x: "))
Y = float(input("coordenada y: "))
if(Y == (-2)*X + 3) :
	print("ponto pertence a reta")
else :
	print("ponto nao pertence a reta")
-- EXECUTION TIME:
0.163292
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
